=head1 NAME

Changes - Apache mod_perl change logfile

=head1 CHANGES

all changes without author attribution are by Doug MacEachern

=over 3

=item 1.21_01-dev

documentation type [David Harris <dharris@drh.net>]

add $r->server->uid and $r->server->gid [Eric Cholet <cholet@logilune.com>]

add per-server configuration merge [Eric Cholet <cholet@logilune.com>]

`_' is no longer escaped in Apache::Registry package names

fix $ENV{PATH} corruption, thanks to help from Chip Turner, 
Oleg Bartunov and Tomasz Przygoda 

mod_perl_version.h removed from MANIFEST

fix modules/sandwich test

apxs/aix port [Paul J. Reder <rederpj@raleigh.ibm.com>]

preload Apache::Constants::OPT_EXECCGI() for Apache::{Registry,PerlRun}
thanks to Chris Remshaw for spotting this w/ Apache::DProf

Apache::SizeLimit now uses $r->child_terminate instead of Apache::exit(-2)
[Jon Peterson <jon@snowdrift.org>]

get rid of various 5.005_60 warnings

add Status{Terse,Deparse,OptionsAll} options to Apache::Status

adjust mod_perl.h for 5.005_59 perl_eval_{pv,sv} rename

fix flush_namespace undef logic in Apache::PerlRun, thanks to Karsten
Meier for the spot

Tweak Apache::content to comply with media-types embedded in content-types
(RFC 2616 section 3.7) [Eric Cholet <cholet@logilune.com>]

Removed and added a few modules from the Bundle file. <ask@netcetera.dk>

Renamed the Apache::StatINC parameters to StatINC_<something>. Changed
StatINC_Debug to take a number as parameter instead of "on" to support
"debug levels" <ask@netcetera.dk>

=item 1.21 - July 2, 1999

fix refcount bug in %VirtualHost [] values, thanks to Pete Ehlke for
the spot

get rid of a warning in Apache::test [Joshua Chamas <joshua@chamas.com>]

$r->read will now properly check the return value of
ap_setup_client_block() and return undef if != OK,
e.g. if LimitRequestBody is exceeded, thanks to Joshua Chamas for the
spot and testing

loosen module/cookie tests

fix bug in register_cleanup() [Chip Turner <chip@ZFx.com>]
